--- a/.github/workflows/update_submodule.yml
+++ b/.github/workflows/update_submodule.yml
@@ -17,6 +17,7 @@ jobs:
       uses: actions/checkout@v2
       with:
         submodules: 'recursive'
+        ref: 'test_yolov7'
 
     - name: Set up Git user
       run: |
@@ -28,7 +29,7 @@ jobs:
         cd ${{ env.SUBMODULE_DIR }}
         git fetch
         if [ $(git rev-parse HEAD) != $(git rev-parse @{u}) ]; then
-          git pull origin main
+          git pull origin pose
           echo "UPDATED=true" >> $GITHUB_ENV
         fi
 
@@ -67,6 +68,7 @@ jobs:
       uses: actions/checkout@v2
       with:
         submodules: 'recursive'
+        ref: 'test_yolov7'
 
     - name: Create Pull Request
       if: env.UPDATED == 'true'
